Fixed product images overlapping in search results

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,7 +80,7 @@ a {
 
 img {
     height: auto;
-    max-width: 100%;
+    max-height: 100%;
 }
 
 .ui.three.cards > .card {
